index shyft transloc

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,18 @@ assets/video/Video Source Download Links.txt
 assets/img/.DS_Store
 assets/.DS_Store
 *.icloud
+*.gif
+Design Files/Photoshop_etc/Home/portfolio-item-1
+Design Files/Photoshop_etc/Home/portfolio-item-2
+Design Files/Photoshop_etc/iphone11overlay
+*.aep
+Design Files/Photoshop_etc/.DS_Store
+Design Files/Photoshop_etc/Home/portfolio-item-1 copy
+Design Files/Photoshop_etc/Home/portfolio-item-3
+Design Files/Photoshop_etc/Shyft/.DS_Store
+Design Files/Photoshop_etc/Shyft/shyft-1
+Design Files/Photoshop_etc/Shyft/shyft-3
+Design Files/Photoshop_etc/TransLoc/.DS_Store
+Design Files/Photoshop_etc/TransLoc/transloc-3
+Design Files/Photoshop_etc/TransLoc/transloc-3-gif
+Design Files/Photoshop_etc/TransLoc/transloc-4
